--- a/frontend/Tienda/package.json
+++ b/frontend/Tienda/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "install": "^0.13.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
